# DNS-exfil-bert

./: .fmleignore  .gitignore  AGENTS.md  README.md  entry.sh  entry_train_run.sh  environment.yml  pyproject.toml  quickstart.py
.github/workflows/: ci.yml
.hypothesis/constants/: 021164fc33ae90b9  02a47235ffda0ff6  0d2eee255414a8f7  0fa7c7ba118f9352  11cd881cac72ca99  21498c49b9fdde29  2368ab491e05acda  32600caf73be7945  462de140f4a87a62  57ae16d4031669db  7294b3c8470a5c45  72d15539943720b2  9560a50df0e5596f  bf382b011b14b578  c13fd276595c58e3  da39a3ee5e6b4b0d  dbda42597735a1b9  f4298bd3d88c0941  f4b8fb69c7fb9a5a  f5692ef9b929ff6e  fd48a9eb831d35d7  fd5f20ed01a7a069
.hypothesis/tmp/: tmp127kmxjd  tmp3ktttln9  tmp6m914koj  tmp6pzezini  tmp6r6x4kgn  tmp7l6s_2o0  tmp9n6rkq4q  tmp_3lci3ci  tmp_c0r1xby  tmpa3s_o0yl  tmpaig5lntj  tmpaxc_ye61  tmpc3_pcv5a  tmpc5dhyg7n  tmpcla994k4  tmpcp56swmq  tmpd75cvihy  tmpdv7qai_9  tmpezgv3fk7  tmphgl3ktdh  tmpiymjoc4u  tmplv4jpivl  tmplx7dy141  tmpomy199gz  tmpozm8xoqw  tmpqrw5e8dh  tmps4ti1zyg  tmpu4bojm4c  tmpuo9hc8s4  tmpuxozg0vm  tmpvj2fmgk1  tmpw6nldei7  tmpwxle_bu8  tmpx76mianm  tmpxysviagb  tmpy3waaldg  tmpz8y8xnap  tmpzi4vyxjk
.tmp_weights/: dup_gid_sqrt_freq.pt
configs/: bert_bpe_8k_regular_dataset_train_config.yaml  bpe8k_reg_bert_reg_dataset_cls_train.yaml  bpe_test_config.yaml  bpe_tok.yaml  bpe_tok_schema.json  bpe_tok_toy.yaml  char_conv_overfit.yaml  cls_char_pretrained.yaml  cls_char_rand_init.yaml  cls_conv_test.yaml  cls_train_char.yaml  config.yaml  config_for_conv_test.yaml  config_for_conv_test_char.yaml  mlm_train_char.yaml  paths.yaml  tokenizer_char.yaml
configs/data/: data_for_mlm.yaml
configs/data_collator/: mlm.yaml
configs/dataset/: dataset_for_labeled.yaml  dataset_for_mlm.yaml  (+2 more)
docs/: CharTokenizer.md
experiments/: abstract_tok.py  char_tok.py  check_unk.py  conv_test_bert_bpe8k.py  dot_check.py  hparam_test.py  overfitting.py  overfitting_char.py  run_mlm.py
notebooks/: run_mlm.ipynb
src/: arguments.py
(+188 files in other folders)
