[build-system]
requires     = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "dns_exfil_mbert"
version         = "0.1.0"
description     = "BERT-based DNS exfiltration detector"
readme          = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
  "torch>=2.0",
  "transformers>=4.30",
  "datasets",
  "hydra-core>=1.3",
  "tokenizers",
  "wandb",
]

[project.scripts]
run-mlm-smoke = "dns_exfil_mbert.training.run_mlm_smoke:main"


[tool.setuptools]
package-dir = { "dns_exfil_mbert" = "src" }

[tool.setuptools.packages.find]
where   = ["src"]
include = ["*"]

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true